--- a/_posts/2019-09-22-技术文档编写规范.md
+++ b/_posts/2019-09-22-技术文档编写规范.md
@@ -1,5 +1,4 @@
-\---
-
+---
 layout:     post
 
 title:      技术文档编写规范
@@ -16,9 +15,8 @@ catalog: true
 
 tags:
 
-​    \- 技术文档编写规范
-
-\---‌
+    - 技术文档编写规范
+---
 
 # 技术文档编写规范
 
