--- a/_posts/2019-09-22-技术文档编写规范.md
+++ b/_posts/2019-09-22-技术文档编写规范.md
@@ -40,33 +40,7 @@ tags:
   - **ChangeLog**：[可选] [文件] 版本说明
   - **Feedback**：[可选] [文件] 反馈方式
 
-
-
-
-
-
-
-
-
-
-
-
-
-‌
-
-下面是两个真实范例，可参考。
-
-
-
-
-
-
-
-
-
-
-
-‌
+下面是两个真实范例，可参考。‌
 
 - [Redux 手册](http://redux.js.org/index.html)
 - [Atom 手册](http://flight-manual.atom.io/)
