--- a/_posts/2019-09-22-设计模式.md
+++ b/_posts/2019-09-22-设计模式.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      设计模式
-subtitle:   
+subtitle:   设计模式笔记
 date:       2019-09-22
 author:     JZ
 header-img: img/post-bg-swift.jpg
