--- a/_posts/2019-09-22-设计模式.md
+++ b/_posts/2019-09-22-设计模式.md
@@ -1,16 +1,23 @@
 ---
 layout:     post
-title:      设计模式
-subtitle:   设计模式笔记
-date:       2019-09-22
-author:     JZ
-header-img: img/post-bg-swift.jpg
-catalog: true
-tags:
-    - Java
-	- 设计模式
----
 
+title:      Java 设计模式
+
+subtitle:   设计模式学习内容
+
+date:       2019-09-22
+
+author:     JZ
+
+header-img: img/post-bg-swift.jpg
+
+catalog: true
+
+tags:
+
+    - java
+    - 设计模式
+---
 
 
 # 设计模式
