--- a/_posts/2019-09-22-Java-反射.md
+++ b/_posts/2019-09-22-Java-反射.md
@@ -1,16 +1,23 @@
 ---
 layout:     post
-title:      Java 反射
-subtitle:   
-date:       2019-09-22
-author:     JZ
-header-img: img/post-bg-swift.jpg
-catalog: true
-tags:
-    - Java
-	- 反射
----
 
+title:      Java 反射
+
+subtitle:   Java 反射内容学习
+
+date:       2019-09-22
+
+author:     JZ
+
+header-img: img/post-bg-swift.jpg
+
+catalog: true
+
+tags:
+
+    - java
+    - 反射
+---
 
 
 # 反射
