--- a/_posts/2019-09-22-Java-并发.md
+++ b/_posts/2019-09-22-Java-并发.md
@@ -1,14 +1,22 @@
 ---
 layout:     post
+
 title:      Java 并发
-subtitle:   
+
+subtitle:   Java 并发内容学习
+
 date:       2019-09-22
+
 author:     JZ
+
 header-img: img/post-bg-swift.jpg
+
 catalog: true
+
 tags:
-    - Java
-	- 并发
+
+    - java
+    - 并发
 ---
 
 # Java 并发内容
