--- a/_posts/2019-09-22-Java-面试问题汇总.md
+++ b/_posts/2019-09-22-Java-面试问题汇总.md
@@ -1,14 +1,22 @@
 ---
 layout:     post
-title:      Java 面试问题汇总
-subtitle:   Java 面试常见基础问题若干
+
+title:      Java 面试内容
+
+subtitle:   Java 基础内容面试总结
+
 date:       2019-09-22
+
 author:     JZ
+
 header-img: img/post-bg-swift.jpg
+
 catalog: true
+
 tags:
-    - Java
-	- 面试
+
+    - java
+    - 面试内容
 ---
 
 # Java 面试问题汇总
