--- a/_posts/2019-09-22-HashMap.md
+++ b/_posts/2019-09-22-HashMap.md
@@ -1,14 +1,22 @@
 ---
 layout:     post
-title:      HashMap 解读
-subtitle:   HashMap 底层解读
+
+title:      Hash 解读
+
+subtitle:   HashMap 底层内容解读
+
 date:       2019-09-22
+
 author:     JZ
+
 header-img: img/post-bg-swift.jpg
+
 catalog: true
+
 tags:
-    - Java
-	- HashMap
+
+    - java
+    - HashMap
 ---
 
 
