--- a/_posts/2019-09-22-JVM 知识内容.md
+++ b/_posts/2019-09-22-JVM 知识内容.md
@@ -1,5 +1,4 @@
-\---
-
+---
 layout:     post
 
 title:      JVM基础内容
@@ -16,13 +15,10 @@ catalog: true
 
 tags:
 
-​    \- java
+    - java
 
-​    \- JVM
-
-\---
-
-
+    - JVM
+---
 
 # JVM 知识内容
 
