--- a/_posts/2019-09-22-MySQL学习笔记.md
+++ b/_posts/2019-09-22-MySQL学习笔记.md
@@ -1,5 +1,4 @@
-\---
-
+---
 layout:     post
 
 title:      MySQL 内容
@@ -16,9 +15,8 @@ catalog: true
 
 tags:
 
-​    \- MySQL
-
-\---
+    - MySQL
+---
 
 # MySQL学习笔记
 
