Docker学习笔记更新， centos安装

--- a/_posts/2019-09-22-Docker-学习笔记.md
+++ b/_posts/2019-09-22-Docker-学习笔记.md
@@ -5,7 +5,7 @@ title:      Docker 学习笔记
 
 subtitle:   Docker 的学习笔记内容
 
-date:       2019-09-22
+date:       2019-12-23
 
 author:     JZ
 
@@ -18,3 +18,114 @@ tags:
     - Docker
 ---
 
+# CentOS  安装Docker
+
+## 系统要求
+
+Docker CE支持64位版本的CentOS 7， 并且要求内核版本不低于3.10。 CentOS 7 满足最低内核的要求，但是由于内核版本比较低，部分功能无法使用，并且功能不太稳定。
+
+## 卸载旧版本
+
+旧版本的Docker 称为 `docker` 或者 `docker-engine`， 使用以下命令卸载旧版本：
+
+```sh
+$ sudo yum remove docker \
+				  docker-client \
+				  docker-client-latest \
+                  docker-common \
+                  docker-latest \
+                  docker-latest-logrotate \
+                  docker-logrotate \
+                  docker-selinux \
+                  docker-engine-selinux \
+                  docker-engine
+```
+
+
+
+## 使用yum安装
+
+执行一下命令安装依赖包
+
+```sh
+$ sudo yum install -y yum-utils \
+		   device-mapper-persistent-data \
+		   lvm2
+```
+
+
+
+鉴于国内的网络问题，使用国内源
+
+```sh
+$ sudo yum-config-manager \
+	--add-repo \ 
+	https://mirrors.ustc.edu.cn/docker-ce/linux/centos/docker-ce.repo
+```
+
+ 使用最新版本的Docker CE使用以下命令：
+
+```sh
+$ sudo yum-config-manager --enable docker-ce-edge
+```
+
+## 安装Docker CE
+
+更新yum 软件源缓存，并安装docker-ce
+
+```sh
+$ sudo yum makecache fast
+$ sudo yum install docker-ce
+```
+
+## 使用脚本自动安装
+
+在测试或开发环境中Docker官方为了简化安装流程， 提供了一套便捷的安装脚本，CentOS系统恶意使用这些脚本安装
+
+```sh
+$ curl -fsSL get.docker.com -o get-docker.sh
+$ sudo sh get-docker.sh --mirror Aliyun
+```
+
+
+
+## 启动Docker CE
+
+```sh
+$ sudo systemctl enable docker
+$ sudo systemctl start docker
+```
+
+
+
+## 建立docker用户组
+
+默认情况下， docker命令会使用Unix socket与Docker引擎通讯。 而只有root用户与docker组的用户才可以访问Docker引擎的Unix socket。 处于安全考虑， 一般， linux上不会直接使用root用户。因此更好 的做法是将docker的用户加入docker用户组
+
+```sh
+$ sudo groupadd docker
+$ sudo usermod -aG docker $USER
+```
+
+## 测试Docker安装是否正确
+
+```sh
+$ docker run hello-world
+```
+
+
+
+出现如下信息的时候
+
+```sh
+To try something more ambitious, you can run an Ubuntu container with:
+ $ docker run -it ubuntu bash
+
+Share images, automate workflows, and more with a free Docker ID:
+ https://cloud.docker.com/
+
+For more examples and ideas, visit:
+ https://docs.docker.com/engine/userguide/
+```
+
+证明安装正确
