--- a/_posts/2019-09-22-HashMap.md
+++ b/_posts/2019-09-22-HashMap.md
@@ -35,6 +35,17 @@ Map map = Collections.synchronizedMap(new HashMap());
 
 ‌
 
+## HashMap存储过程
+
+1. 对于Key值进行hash， 即key.hashcode()
+2. 将1所得的hashcode进行右移16位的操作
+3. 将上述两个进行异或操作
+4. （h-1） & result_3， 即高度减一与上述3结果进行与操作，得出下标index
+
+目的： 当HashMap当中存储的内容变多时容易产升hash碰撞，因此需要通过上述方式使得hash值较为分散
+
+
+
 ## HashMap原理分析
 
 HashMap中数据的存储是由数组和链表一起实现的。
@@ -45,7 +56,7 @@ HashMap中数据的存储是由数组和链表一起实现的。
 
 HashMap的拉链式实现方法如下：
 
-<img src="img/hashmap_structure.png"></img>
+<img src="../img/hashmap_structure.png"></img>
 
 hashMap 实现方式
 
@@ -78,7 +89,7 @@ TreeMap：TreeMap实现SortedMap接口，能够把它保存的记录根据键排
 
 JDK1.8，hashMap中增加了红黑树部
 
-<img src="img/hashmap_br_tree.png"><
+<img src="../img/hashmap_br_tree.png"><
 
 JDK1.8 Node[] table 哈希桶数组
 
