--- a/_posts/2019-09-22-Redis 学习笔记.md
+++ b/_posts/2019-09-22-Redis 学习笔记.md
@@ -47,6 +47,12 @@ make之后， redis-2.8-17目录下会出下编译后的redis服务程序redis-s
 
 启动redis    `./redis-server `或者 `./redis-server redis.conf`
 
+## 创建文件夹
+
+- bin : 放置启动Redist的可执行文件
+- db： 放置数据文件
+- etc： 放置配置文件， 设置Redis的服务端口，日志文件位置，数据文件位置等
+
 ## 常见命令：
 
 1. 五种数据类型： String, List, Hash, Set, Sorted Set
@@ -240,3 +246,148 @@ Redis 通过坚挺一个TCP端口或者Unix socket的方式接收来自客户端
 1. memcached所有的值均是简单的字符串，redis作为其替代者， 支持更为丰富的数据类型
 2. redis的速度更快
 3. 支持持久化数据（memcached将所有的数据均存放在内存当中， redis将部分数据存放至磁盘中）
+
+
+
+## Spring  Boot 整合Redis
+
+具体使用Spring Data Redis
+
+pom.xml
+
+```xml
+<dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-pool2</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+    </dependency>
+</dependencies>
+```
+
+
+
+创建实体类
+
+```java
+package com.james.redis.entity;
+
+import lombok.Data;
+
+import java.io.Serializable;
+import java.util.Date;
+
+/**
+ * @author: JamesZhan
+ * @create: 2019 - 11 - 16 1:01
+ */
+// 实体类需要实现序列化接口
+@Data
+public class Student implements Serializable {
+    private Integer id;
+    private String name;
+    private Double score;
+    private Date birthday;
+}
+
+```
+
+
+
+创建控制器
+
+```java
+package com.james.redis.controller;
+
+import com.james.redis.entity.Student;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RestController;
+
+/**
+ * @author: JamesZhan
+ * @create: 2019 - 11 - 16 1:04
+ */
+@RestController
+public class StudentHandler {
+    @Autowired
+    private RedisTemplate redisTemplate;
+
+    @PostMapping("/set")
+    public void set(@RequestBody Student student){
+//        redisTemplate.opsForValue() 将key， value键值对进行封装
+        redisTemplate.opsForValue().set("student",student);
+    }
+}
+
+```
+
+
+
+配置文件
+
+```yml
+Spring:
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+    
+```
+
+
+
+启动类
+
+```java
+package com.james.redis;
+
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+
+@SpringBootApplication
+public class RedisApplication {
+
+    public static void main(String[] args) {
+        SpringApplication.run(RedisApplication.class, args);
+    }
+
+}
+
+```
+
+
+
+> 注意存入Redis之后，其key值不再为student， 使用 keys *student获得此时的值，  同时 存在redis重点的为序列化的内容
+
+```java
+// get 获取内容
+@GetMapping("/get/{key}")
+    public Student get(@PathVariable("key") String key){
+        return (Student) redisTemplate.opsForValue().get(key);
+    }
+
+// 删除方法
+@DeleteMapping("/delete/{key}")
+    public boolean delete(@PathVariable("key") String key){
+        redisTemplate.delete(key);
+        return redisTemplate.hasKey(key);
+    }
+```
+
