## 2020-11-02: add new post file

--- a/_posts/2019-09-22-MySQL学习笔记.md
+++ b/_posts/2019-09-22-MySQL学习笔记.md
@@ -81,11 +81,26 @@ MySQL查询过程
 
 ## 存储引擎
 
-默认为Innodb
+默认为**Innodb**
 
 MyISAM：以读写为插入为主的应用程序，博客、新闻门户网站
 
-Innodb：更新操作频率较高，或者要保证数据的完整性， 并发量高，支持事务和外间保证数据完整性
+Innodb：更新操作频率较高，或者要保证数据的完整性， 并发量高，支持事务和外间保证数据完整性。 InnoDB采用MVCC来支持高并发，实现四个标准隔离级别（未提交读、提交读、可重复读、可串行化）， 默认级别为可重复读，在此前提下可使用MVCC + Next-Key Locking防止幻读。
+
+InnoDB的主索引为**聚簇索引**，在索引中保存了数据，避免直接读取磁盘，因此主键查询有较高的性能。
+
+InnoDB的优化：从磁盘读取数据时采用的可预测性读，能够自动在内存中船舰hash索引加速读操作
+
+- 聚簇索引：**聚簇索引就是按照每张表的主键构造一颗B+树，同时叶子节点中存放的就是整张表的行记录数据**
+
+#### 两者的区别
+
+- 事务：InnoDB 是事务型的，可以使用 Commit 和 Rollback 语句。
+- 并发：MyISAM 只支持**表级锁**，而 InnoDB 还支持行级锁。
+- 外键：InnoDB 支持**外键**。
+- 备份：InnoDB 支持在线热备份。
+- 崩溃恢复：MyISAM 崩溃后发生损坏的概率比 InnoDB 高很多，而且恢复的速度也更慢。
+- 其它特性：MyISAM 支持压缩表和空间数据索引。
 
 ## 索引
 
