更新笔记内容

--- a/_posts/2020-02-10-Java-源码解析.md
+++ b/_posts/2020-02-10-Java-源码解析.md
@@ -21,6 +21,10 @@ tags:
 
 ## ArrayList 的源码解读
 
+
+
+<img src="../img/arraylist_implements.png" />
+
 ### 1. 整体架构
 
 ArrayList的整体结构比较简单，就是一个数组的结构，其初始的默认数据大小为10， `DEFAULT_CAPACITY`,  为非线性安全的内容
