--- a/_posts/2020-09-03-Java 基础知识.md
+++ b/_posts/2020-09-03-Java 基础知识.md
@@ -158,7 +158,7 @@ volatile的意思是可见的，当变量共享时，若出现变量值被修改
 
 JMM模型
 
-<img src="https://img1.sycdn.imooc.com/5d5fc0ea000100a312740736.png">
+<img src="https://img1.sycdn.imooc.com/5d5fc0ea000100a312740736.png" />
 
 ### 5. transient
 
@@ -214,175 +214,3 @@ Collections是为了方便集合使用的工具类。Collections提供sort和bin
 **不可变的集合**： 
 
 得到不可变集合的方法都是以 unmodifiable 开头的。这类方法的意思是，我们会从原集合中，得到一个不可变的新集合，新集合只能访问，无法修改；一旦修改，就会抛出异常。这主要是因为只开放了**查询**方法，其余任何**修改操作都会抛出异常**
-
-## ArrayList
-
-<img src="../img/arraylist_implements.png"></img>
-
-ArrayList的整体结构比较简单，就是一个数组结构。 其默认初始化的长度为10。
-
-- 允许put null值，且会**自动扩容（1.5倍**）
-- size， isEmpty， set， get， add等方法的时间复杂度都是O（1）
-- 是**非线程安全**的，多线程情况下，使用Collenctions.SyschronizedList
-- 增强for循环，迭代器迭代过程中若大小改变，会快速失败
-
-### 初始化
-
-初始化有三种办法： **无参数直接初始化、指定大小初始化、指定初始数据初始化**
-
-注意点：
-
-1. 无参构造初始化时， ArrayList的**默认大小是空数组**，而不是10， 10始在第一次add的时候扩容后的数组大小、
-
-#### 新增和扩容的实现
-
-新增就是往数组中添加元素：
-
-1. 判断是否需要扩容，如需要则进行扩容
-2. 赋值
-
-```java
-public boolean add(E e){
-    // 判断是否需要扩容
-    ensureCapacityInternal(size + 1);
-    // 赋值
-    elementData[size++] = e;
-    return true;
-}
-private void ensureCapacityInternal(int minCapacity) {
-  //如果初始化数组大小时，有给定初始值，以给定的大小为准，不走 if 逻辑
-  if (elementData == DEFAULTCAPACITY_EMPTY_ELEMENTDATA) {
-    minCapacity = Math.max(DEFAULT_CAPACITY, minCapacity);
-  }
-  //确保容积足够
-  ensureExplicitCapacity(minCapacity);
-}
-private void ensureExplicitCapacity(int minCapacity) {
-  //记录数组被修改
-  modCount++;
-  // 如果我们期望的最小容量大于目前数组的长度，那么就扩容
-  if (minCapacity - elementData.length > 0)
-    grow(minCapacity);
-}
-//扩容，并把现有数据拷贝到新的数组里面去
-private void grow(int minCapacity) {
-  int oldCapacity = elementData.length;
-  // oldCapacity >> 1 是把 oldCapacity 除以 2 的意思
-  int newCapacity = oldCapacity + (oldCapacity >> 1);
-
-  // 如果扩容后的值 < 我们的期望值，扩容后的值就等于我们的期望值
-  if (newCapacity - minCapacity < 0)
-    newCapacity = minCapacity;
-
-  // 如果扩容后的值 > jvm 所能分配的数组的最大值，那么就用 Integer 的最大值
-  if (newCapacity - MAX_ARRAY_SIZE > 0)
-    newCapacity = hugeCapacity(minCapacity);
- 
-  // 通过复制进行扩容
-  elementData = Arrays.copyOf(elementData, newCapacity);
-}
-```
-
-注意点：
-
-- 扩容不是翻倍，而是原来容量的1.5倍
-- ArrayList的最值是Integer.Max_VALUE, 超过这个值， JVM就不会进行内存分配了
-
-扩容的本质： 使用的是Arrays.copyOf(elementData, newCapacity)， 即首先会创建一个符合预期容量的数组，将老数组的数据拷贝过去
-
-#### 删除
-
-注意点：
-
-删除的时候使用equals进行判断，所以当删除的不是基本数据类型的时候，需要关注equals的具体实现
-
-```java
-private void fastRemove(int index) {
-  // 记录数组的结构要发生变动了
-  modCount++;
-  // numMoved 表示删除 index 位置的元素后，需要从 index 后移动多少个元素到前面去
-  // 减 1 的原因，是因为 size 从 1 开始算起，index 从 0开始算起
-  int numMoved = size - index - 1;
-  if (numMoved > 0)
-    // 从 index +1 位置开始被拷贝，拷贝的起始位置是 index，长度是 numMoved
-    System.arraycopy(elementData, index+1, elementData, index, numMoved);
-  //数组最后一个位置赋值 null，帮助 GC
-  elementData[--size] = null;
-}
-```
-
-
-
-## LinkedList
-
-LinkedList的底层是一个双向链表，结构如下所示
-
-<img src="https://img1.sycdn.imooc.com/5d5fc67a0001f59212400288.png"></img>
-
-基本概念：
-
-- 每个节点具有prev和next两个属性
-- 当数据为空的时候，first和last是一个节点，且前后均为null
-- 内存足够大，大小没有限制
-
-#### add
-
-追加节点的时候可以追加到头部或者尾部， add方法是默认添加到尾部的
-
-源码如下：
-
-```java
-// 从尾部开始追加节点
-void linkLast(E e) {
-    // 把尾节点数据暂存
-    final Node<E> l = last;
-    // 新建新的节点，初始化入参含义：
-    // l 是新节点的前一个节点，当前值是尾节点值
-    // e 表示当前新增节点，当前新增节点后一个节点是 null
-    final Node<E> newNode = new Node<>(l, e, null);
-    // 新建节点追加到尾部
-    last = newNode;
-    //如果链表为空（l 是尾节点，尾节点为空，链表即空），头部和尾部是同一个节点，都是新建的节点
-    if (l == null)
-        first = newNode;
-    //否则把前尾节点的下一个节点，指向当前尾节点。
-    else
-        l.next = newNode;
-    //大小和版本更改
-    size++;
-    modCount++;
-}
-```
-
-头部添加类似，将first的prev指向现在的节点
-
-**删除节点**
-
-从头部删除
-
-```java
-//从头删除节点 f 是链表头节点
-private E unlinkFirst(Node<E> f) {
-    // 拿出头节点的值，作为方法的返回值
-    final E element = f.item;
-    // 拿出头节点的下一个节点
-    final Node<E> next = f.next;
-    //帮助 GC 回收头节点
-    f.item = null;
-    f.next = null;
-    // 头节点的下一个节点成为头节点
-    first = next;
-    //如果 next 为空，表明链表为空
-    if (next == null)
-        last = null;
-    //链表不为空，头节点的前一个节点指向 null
-    els
-        next.prev = null;
-    //修改链表大小和版本
-    size--;
-    modCount++;
-    return element;
-}
-```
-
-尾部删除类似
