更新Java源码解析的内容

--- a/_posts/2020-02-10-Java-源码解析.md
+++ b/_posts/2020-02-10-Java-源码解析.md
@@ -19,11 +19,17 @@ tags:
 
 # Java 源码分析
 
+<img src="https://img2018.cnblogs.com/blog/838837/201905/838837-20190521092648019-983754481.png">
+
 ## ArrayList 的源码解读
 
 
 
-<img src="../img/arraylist_implements.png" />
+![img](../img/arraylist_implements.png)
+
+## 脑图
+
+<img src="../img/Java集合.png">
 
 ### 1. 整体架构
 
@@ -244,11 +250,15 @@ if (newCapacity - minCapacity < 0)
 
 所以最终数组扩容后的大小为 16。
 
-## Hash
+## HashMap
+
+### HashMap脑图
+
+
 
 ### 1. 整体架构
 
-HashMap的底层数据结构主要是： 数组+链表+红黑树，当链表的长度大于等于8时，链表会转化成红黑树，当红黑树的大小小于等于6 时，红黑树会转化成链表，整体的数据结构如下：
+HashMap的底层数据结构主要是： **数组+链表+红黑树**，当链表的长度大于等于**8**时，链表会转化成红黑树，当红黑树的大小小于等于6 时，红黑树会转化成链表，整体的数据结构如下：
 
 <img src="../img/HashMap.png">
 
@@ -335,6 +345,10 @@ final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
 }
 ```
 
+### 为什么链表长度大于8的时候需要将其转换成红黑树
+
+- 链表查询的时间复杂度是 O (n)，红黑树的查询复杂度是 O (log (n))。在链表数据不多的时候，使用链表进行遍历也比较快，只有当链表数据比较多的时候，才会转化成红黑树，但红黑树需要的占用空间是链表的 2 倍，考虑到转化时间和空间损耗，所以我们需要定义出转化的边界值。
+
 #### 2.1 红黑树新增节点过程
 
 1. 首先判断新增节点是否在红黑树上已经存在，判断手段主要如下：
@@ -352,4 +366,46 @@ final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
 - 所有叶子都是黑色
 - 从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点
 - 从每个叶子到根的所有路径上不能有两个连续的红色节点
+
+TreeMap的底层数据结构就是红黑树
+
+LinkedHashMap： 按照插入顺序仅从访问
+
+上述三种map的异同
+
+- 相同
+  - 特定情况下， 均使用红黑树作为底层数据结构
+  - hash算法相同
+
+  - 迭代过程中，如果出现数据结构变化，均会快速报错
+
+- 不同
+  - HashMap 数据结构以**数组**为主，查询非常快，TreeMap 数据结构以**红黑树**为主，利用了红黑树左小右大的特点，可以实现 key 的排序，LinkedHashMap 在 HashMap 的基础上增加了**链表的结构**，实现了插入顺序访问和最少访问删除两种策略;
+  - 由于三种 Map 底层数据结构的差别，导致了三者的使用场景的不同，TreeMap 适合需要**根据 key 进行排序的场景**，LinkedHashMap 适合**按照插入顺序访问**，或需要**删除最少访问元素的场景**，剩余场景我们使用 HashMap 即可，我们工作中大部分场景基本都在使用 HashMap；
+
+### 说一下 Map 的 hash 算法
+
+```java
+static final int hash(Object key) {
+    int h;
+    return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
+}
+key 在数组中的位置公式：tab[(n - 1) & hash]
+```
+
+如上代码是 HashMap 的hash 算法。
+
+这其实是一个数学问题，源码中就是通过以上代码来计算 hash 的，首先计算出 key 的 hashcode，因为 key 是 Object，所以会根据 key 的不同类型进行 hashcode 的计算，接着计算 h ^ (h >>> 16) ，这么做的好处是使大多数场景下，算出来的 hash 值比较分散。
+
+一般来说，hash 值算出来之后，要计算当前 key 在数组中的索引下标位置时，可以采用**取模**的方式，就是索引下标位置 = hash 值 % 数组大小，这样做的好处，就是可以保证计算出来的索引下标值可以**均匀的分布在数组的各个索引位置上**，但取模操作对于处理器的计算是比**较慢**的，数学上有个公式，当 **b 是 2 的幂次方时，a % b = a &（b-1**），所以此处索引位置的计算公式我们可以更换为： (n-1) & hash。
+
+### 为什么链表个数大于等于 8 时，链表要转化成红黑树了？
+
+答：当链表个数太多了，遍历可能比较耗时，转化成红黑树，可以使遍历的时间复杂度降低，但转化成红黑树，有空间和转化耗时的成本，我们通过泊松分布公式计算，正常情况下，链表个数出现 8 的概念不到千万分之一，所以说正常情况下，链表都不会转化成红黑树，这样设计的目的，是为了防止非正常情况下，比如 hash 算法出了问题时，导致链表个数轻易大于等于 8 时，仍然能够快速遍历。
+
+###  HashMap 在 put 时，如果数组中已经有了这个 key，我不想把 value 覆盖怎么办？取值时，如果得到的 value 是空时，想返回默认值怎么办？
+
+答：如果数组有了 key，但不想覆盖 value ，可以选择 **putIfAbsent** 方法，这个方法有个内置变量 **onlyIfAbsent**，内置是 true ，就不会覆盖，我们平时使用的 put 方法，内置 onlyIfAbsent 为 false，是允许覆盖的。
+
+取值时，如果为空，想返回默认值，可以使用 getOrDefault 方法，方法第一参数为 key，第二个参数为你想返回的默认值，如 **map.getOrDefault(“2”,“0”)**，当 map 中没有 key 为 2 的值时，会默认返回 0，而不是空。
 
